<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CDC7BE"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView"
        android:layout_width="283dp"
        android:layout_height="97dp"
        android:fontFamily="@font/berkshire_swash"
        android:gravity="center"
        android:text="@string/ackreman"
        android:textColor="#766161"
        android:textSize="55sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.135" />

    <Button
        android:id="@+id/toAddDishBtn"
        android:layout_width="193dp"
        android:layout_height="66dp"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:text="@string/add_dish"
        android:textColor="#393E46"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.224" />

    <Button
        android:id="@+id/toMenuBtn"
        android:layout_width="193dp"
        android:layout_height="66dp"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:text="@string/menu"
        android:textColor="#393E46"
        android:textColorHighlight="#766161"
        android:textColorLink="#766161"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toAddDishBtn"
        app:layout_constraintVertical_bias="0.198" />
</androidx.constraintlayout.widget.ConstraintLayout>