<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CDC7BE"
    tools:context=".AddDish">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="320dp"
        android:layout_height="80dp"
        android:fontFamily="@font/berkshire_swash"
        android:text="@string/text"
        android:textColor="#E1F1DD"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.087" />

    <EditText
        android:id="@+id/dishNameInputField"
        android:layout_width="324dp"
        android:layout_height="72dp"
        android:background="#00E1F1DD"
        android:ems="10"
        android:gravity="center|start"
        android:hint="Enter the dish name"
        android:inputType="textPersonName"
        android:textColor="#393E46"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.332" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="324dp"
        android:layout_height="32dp"
        android:background="#A8A8A8"
        android:fontFamily="@font/berkshire_swash"
        android:text="@string/ingredients_0"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.675" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="324dp"
        android:layout_height="32dp"
        android:background="#A8A8A8"
        android:fontFamily="@font/berkshire_swash"
        android:text="@string/dish_name"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.242" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="324dp"
        android:layout_height="32dp"
        android:background="#A8A8A8"
        android:fontFamily="@font/berkshire_swash"
        android:text="@string/dish_price"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.459" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="320dp"
        android:layout_height="80dp"
        android:fontFamily="@font/berkshire_swash"
        android:text="@string/text"
        android:textColor="#766161"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.087" />

    <EditText
        android:id="@+id/ingredientsInputField"
        android:layout_width="323dp"
        android:layout_height="68dp"
        android:ems="10"
        android:background="#00E1F1DD"
        android:gravity="center|start"
        android:hint="Enter the ingredients"
        android:inputType="textPersonName"
        android:textColor="#393E46"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.787" />

    <EditText
        android:id="@+id/dishPriceInputField"
        android:layout_width="326dp"
        android:layout_height="75dp"
        android:ems="10"
        android:background="#00E1F1DD"
        android:gravity="center|start"
        android:hint="Enter the dish price"
        android:inputType="textPersonName"
        android:textColor="#393E46"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.571" />

    <Button
        android:id="@+id/submitTheForm"
        android:layout_width="320dp"
        android:layout_height="69dp"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:text="@string/submit"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.56"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ingredientsInputField"
        app:layout_constraintVertical_bias="0.541" />

</androidx.constraintlayout.widget.ConstraintLayout>